<resources>
    <string name="app_name">My App</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="welcome">Welcome</string>
    <string name="textview">Dont have an account?</string>
    <string name="btnlogin">Login</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="title_activity_teachernew">Teachernew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notices">Notices</string>
    <string name="menu_forum">Discussion Forum</string>
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_logOut">Log Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_student_new">StudentNew</string>
    <string name="notice_name">Notice Name</string>
    <string name="tag_goes_here">Tag goes here</string>
    <string name="uploaded_by">Uploaded by</string>
    <string name="created">Created</string>
    <string name="bookmark">Bookmark</string>
    <string name="manifest_name_notices">Notices</string>

</resources>
