<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/courgette"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="24sp"
        app:fontFamily="@font/courgette" />

    <EditText
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="15"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/name"
        android:drawablePadding="10dp"
        android:textColorHint="#DCDCDC" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edittext"
        android:ems="15"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:textColorHint="#DCDCDC"/>

    <Button
        android:id="@+id/btnlogin"
        style="@style/CardView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_btn"
        android:onClick="onClickLogin"
        android:text="@string/btnlogin"
        android:textAlignment="center"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:onClick="onClickSignUp"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="12sp"
        app:fontFamily="@font/arsenal" />


</LinearLayout>